stop inverting the screenshots in dark mode, whoops

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -101,7 +101,7 @@ footer hr {
 }
 
 @media (prefers-color-scheme: dark) {
-  img {
+  header img {
     filter: grayscale(0.75) invert(1) brightness(2);
   }
 }
